# flight-deal-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run-searchapi-once.sh  start-searchapi.sh
config/: config.amadeus.example.yaml  config.example.yaml  config.searchapi.example.yaml  config.us_ca.amadeus.example.yaml  config.us_ca.searchapi.example.yaml  local_web_search.example.yaml
data/regions/: README.md  example_europe.yaml  na_us_ca_major.yaml  us_ca_all_scheduled.yaml  us_ca_major.yaml
flight_deal_agent/: __main__.py  amadeus_verify.py  analyst.py  api.py  cli.py  collector.py  env.py  local_search.py  models.py  notifier.py  orchestrator.py  runner.py  scheduler.py  settings.py  storage.py
flight_deal_agent/web/: app.css  app.js  index.html
scripts/: .chat_bridge.env.example  ensure-runtime-python.sh  hourly_flight_web_search_prompt.txt  hourly_flight_web_search_reminder.py  hourly_flight_web_search_terminal.py  hourly_flight_web_search_terminal_prompt.txt  install_gui.py  launch_gui.py  send_chat_message_via_codex.py
skills/flight-hourly-web-search/: SKILL.md
tests/: conftest.py  test_amadeus_verify.py  test_analyst.py  test_api.py  test_collector.py  test_local_search.py  test_orchestrator.py  test_runner.py  test_settings.py  test_storage.py
