[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-deal-agent"
version = "0.1.0"
description = "按区域监控往返特价航班的 agentic 骨架（数据源与策略待接入）"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Jeffrey Deng" }]
keywords = ["flights", "travel", "agent", "monitoring"]
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
       "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[project.scripts]
flight-deal-agent = "flight_deal_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["flight_deal_agent"]

[tool.ruff]
line-length = 100
target-version = "py39"
