[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbitscan"
version = "0.2.1"
description = "OrbitScan：按区域与定时任务监控低价航线（本地看板 + 可选 API 采集管线）"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Jeffrey Deng" }]
keywords = ["flights", "travel", "agent", "monitoring"]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "apscheduler>=3.10,<4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[project.scripts]
orbitscan = "flight_deal_agent.cli:main"
flight-deal-agent = "flight_deal_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["flight_deal_agent"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
